[tool.poetry]
name = "email-auth"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
msal = "^1.17.0"
oauth2 = "^1.9.0"
google-auth-oauthlib = "^0.5.1"
cryptography = "41.0.1"
O365 = "2.0.34"
toml = "^0.10.2"
pydantic = "^2.7.1"

[tool.poetry.scripts]
email-auth = "email_auth.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
