[tool.poetry]
name = "email-auth"
version = "0.1.0"
description = ""
authors = ["John Maximilian <2e0byo@gmail.com>"]
include = ["server.cert", "server.key"]

[tool.poetry.dependencies]
python = "^3.12"
msal = "^1.31.0"
oauth2 = "^1.9.0.post1"
google-auth-oauthlib = "^1.2.1"
cryptography = "^43.0.3"
o365 = "^2.0.37"
toml = "^0.10.2"
pydantic = "^2.9.2"

[tool.poetry.scripts]
email-auth = "email_auth.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
